crates/commitscape-tui/tests/snapshots/render__overview.snap
---
source: crates/commitscape-tui/tests/render.rs
assertion_line: 31
expression: "screen(&mut opened(Span::Quarter))"
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"─━━━━━━━━━━───────────────────────────────────────────────────────────────────────────────────────────────────"
" acme                                                                                                         "
" A Rust repository, 1 year and 11 months old.                                                                 "
"╭────────────────╮╭─────────────────╮╭────────────────╮╭────────────────╮╭─────────────────╮╭────────────────╮"
"│58              ││4                ││7               ││542             ││1.9 years        ││46              │"
"│commits         ││people           ││files           ││lines of code   ││old              ││active days     │"
"╰────────────────╯╰─────────────────╯╰────────────────╯╰────────────────╯╰─────────────────╯╰────────────────╯"
" ████████████████████████████████████████████████████████████████████████████████████████████████████████████ "
" ● Rust 77%   ● TypeScript 23%                                                                                "
"                                                                                                              "
"╭ Commits over time ────────────────────────────── 46 in 90 days ╮╭ Who writes the code ──────────── 90 days ╮"
"│each bar is 2 days, the tallest 2 commits                       ││● Alice Example (exam… ██████     30  65% │"
"│         █    █         █  █    █     ██                        ││● Bob Builder          █▉          9  20% │"
"│█ █████ ██ ██ ██ ██████████████████████████ █                   ││● Carol Coder          █▌          7  15% │"
"│Apr 2025      May             Jun            Jul                ││                                          │"
"╰────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────╯"
"╭ Did you know? ──────────────────────────────────────╮╭ Worth a look ──────────────────────── enter to open ╮"
"│▸ Most commits land around 10:00, local time.        ││▌▲ src/engine/: 88% of commits by Alice Example (exa…│"
"│▸ Weekend warriors: 28% of commits land on a weekend.││ ◆ Hottest file: core.rs, changed 34 times           │"
"│▸ 7% of commits were written with an AI agent.       ││ ⇄ handlers.ts and client.ts change together (75%)   │"
"│▸ Longest streak: 4 days in a row, from 17 Jun 2025. ││ ○ 1 of 7 files untouched for a year                 │"
"│▸ 46% of commits are features and 37% are fixes.     ││ ● 1 pair of names may be one person                 │"
"╰─────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  ←→ panels  w window  ? help  q quit                                                     "
