crates/commitscape-tui/tests/snapshots/render__people.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: "panel('3')"
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Hotspots   6 Coupling   7 Ownership   8 Age   9 GitHub        "
"───────────────────────────━━━━━━━━───────────────────────────────────────────────────────────────────────────"
"╭ People ────────────────────────────────────────────────────── 3 committed in 90 days · enter for a profile ╮"
"│  #  person                                                             commits share     active last commit│"
"│▌ 1  ● Alice Example                ████████████████████████████████████     30   65%    30 days   1 day ago│"
"│  2  ● Bob Builder                  ██████████▉                               9   20%     9 days 11 days ago│"
"│  3  ● Carol Coder                  ████████▌                                 7   15%     7 days  8 days ago│"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Same person? ──────────────────────────────────────────────────── open one of them to see how to join them ╮"
"│1 pair of identities shares a name or an email name. Nothing was merged:                                    │"
"│  ● Alice Example <alice@example.com>  ·  ● alice <alice@home.example.net>                                  │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  ←→ panels  w window  / find  ? help  q quit                                             "
