crates/commitscape-tui/tests/snapshots/render__the_map_colours_by_owner.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Risk                                                          "
"──────────────────────────────────────━━━━━───────────────────────────────────────────────────────────────────"
"╭ Map of acme ─────────────────────────────────────────────────────────── sized by lines · coloured by owner ╮"
"│┏ src/  500 lines ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓  web/    │"
"│┃ engine/                                                        api/            legacy/         ┃  42 lin… │"
"│┃ 330 lines                                                      80 lines        60 lines        ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                util/           ┃          │"
"│┃                                                                                30 lines        ┃          │"
"│┃                                                                                                ┃          │"
"│┃                                                                                                ┃          │"
"│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛          │"
"│                                                                                                    docs/   │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" src/   500 lines in 5 files · 92% of the code   enter to go in                                               "
" 41 commits in 90 days · last touched 1 day ago · 73% by ● Alice Example                                      "
" who made most of its commits: ● Alice Example  ● Bob Builder  ● Carol Coder  ● nobody in this window         "
"                                                                                                              "
" ↑↓ move  enter open  ←→ panels  w window  c colour by: activity / age / owner  ? help  q quit                "
