crates/commitscape-tui/tests/snapshots/render__year_bucket.snap
---
source: crates/commitscape-tui/tests/render.rs
expression: screen(&mut app)
---
" commitscape   acme   58 commits · 4 people · since 31 Jul 2023                    window  30d  90d  1y  all  "
" 1 Overview   2 Activity   3 People   4 Map   5 Risk                                                          "
"─━━━━━━━━━━───────────────────────────────────────────────────────────────────────────────────────────────────"
"╭ Files last touched a year or more ago ─────────────────────────────────────────────────── enter for a file ╮"
"│ file                                   days   last touched   folder                                        │"
"│▌old.rs                                  600     2023-11-08   src/legacy/                                   │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" ↑↓ move  enter open  esc back  ←→ panels  w window  ? help  q quit                                           "
